# CorrelationCoefficientPy

./: 002_run.bat  003_run.bat  halfwinequality.py  plotme.py  pyproject.toml  winequality.py
